Fixed alignment of h5s in long desc

--- a/css/responsive_doc.css
+++ b/css/responsive_doc.css
@@ -124,6 +124,7 @@ h5.wp_responsive_doc,
 .wp_responsive_doc .panel-body ul,
 .wp_responsive_doc .panel-body img,
 .wp_responsive_doc .panel-body h4,
+.wp_responsive_doc .panel-body h5,
 .wp_responsive_doc .panel-body table,
 .wp_responsive_doc .panel-body pre,
 .wp_responsive_doc .panel-body .num { margin-left: 20px; }
